# pico

./: README.md
TinyUSB_built/: CMakeCache.txt  Makefile  cmake_install.cmake
TinyUSB_built/audio_4_channel_mic/: Makefile  audio_4_channel_mic.dis  audio_4_channel_mic.elf  audio_4_channel_mic.elf.map  audio_4_channel_mic.hex  audio_4_channel_mic.uf2  cmake_install.cmake
TinyUSB_built/audio_test/: Makefile  audio_test.dis  audio_test.elf  audio_test.elf.map  audio_test.hex  audio_test.uf2  cmake_install.cmake
TinyUSB_built/board_test/: Makefile  board_test.dis  board_test.elf  board_test.elf.map  board_test.hex  board_test.uf2  cmake_install.cmake
TinyUSB_built/cdc_dual_ports/: Makefile  cdc_dual_ports.dis  cdc_dual_ports.elf  cdc_dual_ports.elf.map  cdc_dual_ports.hex  cdc_dual_ports.uf2  cmake_install.cmake
TinyUSB_built/cdc_msc/: Makefile  cdc_msc.dis  cdc_msc.elf  cdc_msc.elf.map  cdc_msc.hex  cdc_msc.uf2  cmake_install.cmake
TinyUSB_built/dfu/: Makefile  cmake_install.cmake  dfu.dis  dfu.elf  dfu.elf.map  dfu.hex  dfu.uf2
TinyUSB_built/dfu_runtime/: Makefile  cmake_install.cmake  dfu_runtime.dis  dfu_runtime.elf  dfu_runtime.elf.map  dfu_runtime.hex  dfu_runtime.uf2
TinyUSB_built/dynamic_configuration/: Makefile  cmake_install.cmake  dynamic_configuration.dis  dynamic_configuration.elf  dynamic_configuration.elf.map  dynamic_configuration.hex  dynamic_configuration.uf2
TinyUSB_built/elf2uf2/: CMakeCache.txt  Makefile  cmake_install.cmake
TinyUSB_built/hid_composite/: Makefile  cmake_install.cmake  hid_composite.dis  hid_composite.elf  (+3 more)
pico-blink/: CMakeLists.txt  blink.c
pico-test/: CMakeLists.txt  test.c
pico-usbtest/: CMakeLists.txt  README.md
(+306 files in other folders)
